update footer content and add basic SEO

--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Primary Meta Tags -->
+    <title>Sakura no Saki | JSC Maid Cafe</title>
+    <meta name="title" content="Sakura no Saki | JSC Maid Cafe" />
+    <meta name="description" content="Chào mừng các chủ nhân đến với Sakura no Saki, sự kiện trải nghiệm Maid Cafe tuyệt vời được tổ chức bởi JSC" />
+    <meta name="keywords" content="Maid Cafe, FPT University, JSC, Anime, Cosplay, Sakura no Saki, Event, HCM, Trường Đại Học FPT" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JSC Maid Cafe</title>
-</head>
+    <!-- Language / Locale -->
+    <meta property="og:locale" content="vi_VN" />
+    <meta property="og:locale:alternate" content="en_US" />
 
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-  <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous"
-    src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v24.0&appId=APP_ID"></script>
-
-</body>
-
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v24.0&appId=APP_ID"></script>
+  </body>
 </html>
