--- a/index.html
+++ b/index.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
 <html lang="vi">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <!-- Primary Meta Tags -->
-    <title>Sakura no Saki | JSC Maid Cafe</title>
-    <meta name="title" content="Sakura no Saki | JSC Maid Cafe" />
-    <meta name="description" content="Chào mừng các chủ nhân đến với Sakura no Saki, sự kiện trải nghiệm Maid Cafe tuyệt vời được tổ chức bởi JSC" />
-    <meta name="keywords" content="Maid Cafe, FPT University, JSC, Anime, Cosplay, Sakura no Saki, Event, HCM, Trường Đại Học FPT" />
 
-    <!-- Language / Locale -->
-    <meta property="og:locale" content="vi_VN" />
-    <meta property="og:locale:alternate" content="en_US" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-    <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v24.0&appId=APP_ID"></script>
-  </body>
+  <!-- Primary Meta Tags -->
+  <title>Sakura no Saki | JSC Maid Cafe</title>
+  <meta name="title" content="Sakura no Saki | JSC Maid Cafe" />
+  <meta name="description"
+    content="Chào mừng các chủ nhân đến với Sakura no Saki, sự kiện trải nghiệm Maid Cafe tuyệt vời được tổ chức bởi JSC" />
+  <meta name="keywords"
+    content="Maid Cafe, FPT University, JSC, Anime, Cosplay, Sakura no Saki, Event, HCM, Trường Đại Học FPT" />
+
+  <!-- Language / Locale -->
+  <meta property="og:locale" content="vi_VN" />
+  <meta property="og:locale:alternate" content="en_US" />
+
+  <!--Google Tag-->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G61ZP6HD9R"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-G61ZP6HD9R');
+  </script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous"
+    src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v24.0&appId=APP_ID"></script>
+</body>
+
 </html>
